--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=uni-stud
+
+########################################
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+########################################
+#validate in prod
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
